--- a/src/app/components/create-result/create-result.component.html
+++ b/src/app/components/create-result/create-result.component.html
@@ -1,1 +1,3 @@
+  <h3 class="text-center">Create Result</h3>
+  
   <app-create-result-form (onFormSubmit)="onSubmitResultsForm($event)"></app-create-result-form>
