--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -10,3 +10,4 @@
       </tr>
     </tbody>
   </table>
+  <h5 class="text-center" *ngIf="leagueTableData.data.length === 0">League is yet to be started</h5>
