--- a/src/app/components/create-result-form/create-result-form.component.html
+++ b/src/app/components/create-result-form/create-result-form.component.html
@@ -9,6 +9,7 @@
           <div *ngIf="f.firstTeam.errors.required">
             This Form field is required
           </div>
+
         </div>
       </div>
 
@@ -20,25 +21,45 @@
           <div *ngIf="f.secondTeam.errors.required">
             This Form field is required
           </div>
+          <div *ngIf="f.secondTeam.errors.shouldNotMatch">Duplicate Teams are not allowed</div>
+
         </div>
       </div>
 
       <div class="form-group my-1">
         <label>Score</label>
-        <input type="number" class="form-control rounded-0" formControlName="firstScore"  [ngClass]="{ 'is-invalid': formSubmitted && f.firstScore.errors }" placeholder="Score">
+        <input type="number" class="form-control rounded-0" formControlName="firstScore" step="1"  [ngClass]="{ 'is-invalid': formSubmitted && f.firstScore.errors }" placeholder="Score">
         <div *ngIf="formSubmitted && f.firstScore.errors" class="invalid-feedback">
           <div *ngIf="f.firstScore.errors.required">
             This Form field is required
+          </div>
+          <div *ngIf="f.firstScore.errors.min">
+            less than 0 is not allowed
+          </div>
+          <div *ngIf="f.firstScore.errors.max">
+            more than 50 is not allowed
+          </div>
+          <div *ngIf="f.firstScore.errors.pattern">
+            Please add Natural number
           </div>
         </div>
       </div>
 
       <div class="form-group my-1">
         <label>Score</label>
-        <input type="number" class="form-control rounded-0" formControlName="secondScore"  [ngClass]="{ 'is-invalid': formSubmitted && f.secondScore.errors }" placeholder="Score">
+        <input type="number" class="form-control rounded-0" formControlName="secondScore" step="1" [ngClass]="{ 'is-invalid': formSubmitted && f.secondScore.errors }" placeholder="Score">
         <div *ngIf="formSubmitted && f.secondScore.errors" class="invalid-feedback">
           <div *ngIf="f.secondScore.errors.required">
             This Form field is required
+          </div>
+          <div *ngIf="f.secondScore.errors.min">
+            less than 0 is not allowed
+          </div>
+          <div *ngIf="f.secondScore.errors.max">
+            more than 50 is not allowed
+          </div>
+          <div *ngIf="f.secondScore.errors.pattern">
+            Please add Natural number
           </div>
         </div>
       </div>
