--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <button type="button" class=" btn btn-outline-primary mx-2" [routerLink]="['results']" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}" >
       Results
     </button>
-    <button type="button" class=" btn btn-outline-primary  mx-2" [routerLink]="['create-result']" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
+    <button type="button" class=" btn btn-outline-primary  mx-2" [routerLink]="['create-result']" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:false}">
       New Results
     </button>
     <button type="button" class=" btn btn-outline-primary  mx-2" [routerLink]="['standings']" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
