--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -1,4 +1,4 @@
-<h3 class="text-center">Premier League</h3>
+<h3 class="text-center">League Results</h3>
 
 <div class="text-center date-wrapper" *ngFor="let item of sortedDates">
   <h6 >{{item}}</h6>
