--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -6,8 +6,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let key of leagueTableData.data; let i = index">
-        <td  *ngFor="let x of leagueTableData.tableColumns">{{x.key === 'index' ? i + 1 : key[x.key]}}</td>
+        <td  *ngFor="let x of leagueTableData.tableColumns">{{x?.key ? key[x.key] : ''}}</td>
       </tr>
     </tbody>
   </table>
-  <h5 class="text-center" *ngIf="leagueTableData.data.length === 0">League is yet to be started</h5>
