fix: date validation

--- a/src/app/components/create-result-form/create-result-form.component.html
+++ b/src/app/components/create-result-form/create-result-form.component.html
@@ -71,6 +71,9 @@
                 <div *ngIf="f.date.errors.required">
                   This Form field is required
                 </div>
+                <div *ngIf="f.date.errors.futureDate">
+                  Future Dates are not allowed
+                </div>
               </div>
         </div>
 
